# PoB2-for-macOS

./: .busted  .gitgnore  .gitignore  .mcp.json  A1_ARTISAN_IMPLEMENTATION_PLAN.md  ARTISAN_PHASE15_COMPLETE_GUIDE.md  ARTISAN_PHASE15_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  MERCHANT_M2_M4_M5_COMPLETION_SUMMARY.txt  PALADIN_MISSION_COMPLETE.md  PALADIN_PHASE11_MISSION_COMPLETE.txt  PALADIN_PHASE15_COMPLETION_SUMMARY.txt  PARTS_EXTRACTOR_DELIVERY.md  PHASE15_ARTISAN_COMPLETION_VERIFICATION.md  PHASE15_ARTISAN_EXECUTIVE_SUMMARY.md  PHASE15_DISTRIBUTION_SUMMARY.txt  PHASE15_INDEX.md  PHASE15_MANDATE_SUMMARY.txt  PHASE15_MAYOR_ACKNOWLEDGMENT.md  PHASE15_MERCHANT_COMPLETION_NOTICE.txt  PHASE16_COMPLETION_FINAL.md  README.md  RESEARCH.md  RESEARCH_local.md  RESEARCH_origin.md  SAGE_PHASE15_BLOCKING_GATE_LIFTED.md  SAGE_PHASE15_EXECUTION_COMPLETE.txt  UPSTREAM.md  claude-code-insights-日本語版.md  plan.md  subscript_worker_A1_implementation.c  village_communications.yaml
.claude/: .luarc.json  AGENT.md  CLAUDE.md  LIBRARY.md  QUICKSTART.md  SKILL.md  TASK_QUEUE_README.md  WORKFLOW.md  add_task.sh  run_queue.sh  settings.json  settings.local.json  settings.local.json.backup  show_queue.sh  task_queue.yaml
.claude/debug_reports/: ROOT_CAUSE_ANALYSIS.md  task_1_shader_analysis.md  task_2_build_audit.md
.github/workflows/: test.yml
PathOfBuilding.app/Contents/: Info.plist
agents/: 00_overview.md  00_overview.md.backup  01_prophet.md  01_prophet.md.backup  02_mayor.md  02_mayor.md.backup  03_paladin.md  03_paladin.md.backup  04_merchant.md  05_sage.md  05_sage.md.backup  06_bard.md  07_artisan.md  07_artisan.md.backup  08_explorer.md  10_nilguardian.md
doc/: README.md
doc/agents/: 02_mayor.md  06_bard.md  09_metalspecialist.md
doc/learning/: APP_BUNDLE_LOG_BLOCK_PLAN_V1_20260210.md  ASCENDANCY_CLICK_CRASH_ANALYSIS.md  (+127 more)
docs/: PHASE16_INSTALLATION_GUIDE.md  PHASE16_QUICK_START.md  PHASE16_RELEASE_ANNOUNCEMENT.md  README.md
installed-skills/: Claude_Skills_完全ガイド.md  README.md  クイックリファレンス.md
memory/: ARTISAN_PHASE15_A1_IMPLEMENTATION.md  BARD_PHASE15_COMPLETION_SUMMARY.md  DIVINE_FINAL_REPORT_20260128.md  INDEX.md  MEMORY_ORGANIZATION_README.md  MERCHANT_PHASE15_COMPLETION_REPORT.md  ORGANIZATION_COMPLETE.md  PALADIN_P2_THREADSANITIZER_REPORT.md  PALADIN_P3_VALGRIND_REPORT.md  PALADIN_PHASE15_DOCUMENTATION_INDEX.md  PALADIN_PHASE15_EXECUTION_LOG.md  PALADIN_PHASE15_EXECUTION_SUMMARY.md  PALADIN_PHASE15_FINAL_AUTHORITY_REPORT.md  PALADIN_PHASE15_FINAL_REPORT.md  PALADIN_PHASE15_SECURITY_VALIDATION.md  PHASE15_ARCHITECTURE.md  PHASE15_COMPLETION_REPORT.md  PHASE15_COORDINATION_PLAN.md  PHASE15_DEPLOYMENT_GUIDE.md  PHASE15_LUA_CLEANUP_REFERENCE.c  PHASE15_MANDATE_INDEX.md  PHASE15_MERCHANT_FINAL_REPORT.md  PHASE15_MERCHANT_M1_M3_COMPLETION.txt  PHASE15_MERCHANT_M2_EXECUTION.md  PHASE15_MERCHANT_M4_EXECUTION.md  PHASE15_MERCHANT_M5_PRODUCTION_SIGNOFF.md  PHASE15_MERCHANT_SUMMARY.md  PHASE15_PERFORMANCE_PROFILE.md  PHASE15_QUICK_REFERENCE.md  PHASE15_REGRESSION_TESTING_STRATEGY.md  PHASE15_RELEASE_NOTES.md  PHASE15_SECURITY_REVIEW.md  PHASE15_SHUTDOWN_DESIGN.md  PHASE15_TESTING_STRATEGY.md  PHASE16_BARD_COMPLETION_REPORT.md  PHASE16_EXECUTIVE_SUMMARY.md  PHASE16_MAYOR_RELEASE_AUTHORIZATION.md  PROJECT_QUICK_LINKS.md  SAGE_PHASE15_COMPLETION_SUMMARY.md  builder_json_storage.md  (+11 more)
parts_extractor/: .gitignore  DIVINE_REQUIREMENTS.md  GUARDIAN_REVIEW.md  README.md  config.py  data_analyzer.py  data_storage.py  main.py  mock_data.py  parts_extractor.spec  requirements.txt  sheets_api.py  test_parts_extractor.py  ui.py  village_communications.yaml  高額部品抽出ツール.spec
pob2macos/: .gitignore  CLAUDE.md  RAWGET_RAWSET_ANALYSIS.md  README_LAUNCH.md  launcher.applescript  pob2_launch.lua  runtime  test_5sec.lua  test_draw_params.lua  test_drawimage_minimal.lua  test_image_loading.lua  test_metal_minimal.lua  test_minimal_render.lua  test_passive_tree.lua  test_passive_tree_fixed.lua  test_passivespec_rawget.lua  test_render_notext.lua  test_simplegraphic.lua  test_tab_system.lua  test_tab_ui.lua  test_tabs_simple.lua  test_text_comprehensive.lua  test_tree_diagnostic.lua  test_window.lua  test_with_monitoring.sh  v3_vertex_analysis_summary.txt
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/: CMakeLists.txt
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/include/: sg_internal.h
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/src/backend/metal/: metal_shaders.metal
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/src/core/: sg_state.cpp
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/src/lua/: sg_lua_bindings.cpp
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/src/utilities/: sg_clipboard.cpp  sg_console.cpp
pob2macos/PathOfBuilding.app/Contents/Resources/pob2macos/simplegraphic/src/window/: sg_window.cpp
queue/: PALADIN_PHASE15_STATUS.md  mayor_to_artisan_phase3_assignment.md  prophet_phase13_mandate.yaml  prophet_phase15_mandate.yaml  prophet_phase16_mandate.yaml  prophet_to_mayor.yaml  prophet_to_mayor_pob2macos.yaml
scripts/: scrape_gem_descriptions.py
skills/: ship-feature.md
tools/: cleanup_broken_translations.py  fix_salvageable_translations.py  strict_cleanup.py
village_tool/: README.md  bulletin.py  main.py  test_advanced.py  test_suite.py  weather.py
(+539 files in other folders)
